      -l and -la switches
    - all the volume processing routines were optimized for speed
    - one bug causing incorrect time limit treatment was fixed
    - added display of the time limit at boot time
    - MFT zone draw was adjusted to be more precise and correct
    - few bugs in cluster map redraw algorithm were fixed
    - few bugs in volume processing routines were fixed
    - the following translations were added:

      Latin, Hebrew, Javanese, Indonesian (Bahasa Indonesia)

    - the following translations were updated:

      Portuguese (BR), Yiddish, Hungarian, Spanish (ES), Dutch, Finnish,
      Italian, Iloko, Filipino (Tagalog), Catalan, Danish, Norwegian,
      Portuguese
    
    - installer has been enhanced in the following ways:
      + now checks Mutex to prevent install/remove while the program is running
      + installer supports full, micro edition and custom installation
      + component selections are remembered between installations
      + interfaces can be selected individually
      + shortcut icons can be selected individually
      + all selections can be done through command line switches
        during silent installations using the /S switch:
            * /FULL .............. install full edition
            * /MICRO ............. install micro edition (no GUI, no help, no icons)
            * /ICONS ............. install/remove all shortcut icons
            * /BOOT .............. install/remove boot time component
            * /CONSOLE ........... install/remove console component
            * /GUI ............... install/remove GUI component
            * /HELP .............. install/remove documentation
            * /SHELLEXTENSION .... install/remove Explorer context menu handler
            * /STARTMENUICON ..... install/remove start menu icon
            * /DESKTOPICON ....... install/remove desktop icon
            * /QUICKLAUNCHICON ... install/remove quick launch icon