@@ -179,6 +179,36 @@ void show_help(void)
 		"                                      moved.\n"
 		"                                      This allows testing the algorithm without\n"
 		"                                      changing the content of the disk.\n"
+		"\n"
+		"Examples:\n"
+		"  set UD_IN_FILTER=windows;winnt      include only paths, which include one\n"
+		"                                      of these words.\n"
+		"\n"
+		"  set UD_SIZELIMIT=50Mb               process only files below 50 MB in size.\n"
+		"\n"
+		"  set UD_FRAGMENTS_THRESHOLD=6        process only files with more than\n"
+		"                                      '6' fragments.\n"
+		"\n"
+		"  set UD_TIME_LIMIT=6h 30m            terminate processing after 6 hours\n"
+		"                                      and 30 minutes.\n"
+		"\n"
+		"  set UD_LOG_FILE_PATH=C:\\Windows\\Temp\\defrag_native.log\n"
+		"                                      save debugging information to the\n"
+		"                                      specified file.\n"
+		"\n"
+		"  udefrag C:                          defragment drive C:\n"
+		"\n"
+		"  udefrag -la                         list all available drives.\n"
+		"\n"
+		"  udefrag -a --all-fixed              analyze all drives excluding removable ones.\n"
+		"\n"
+		"  udefrag -o E: K:                    optimize drives E: and K:\n"
+		"\n"
+		"  udefrag -q O: Q:                    quick optimize drives O: and Q:\n"
+		"\n"
+		"  udefrag C:\\Windows\\WindowsUpdate.log \"C:\\Program Files\"\n"
+		"                                      defragment the specified file and folder.\n"
+		"\n"
 		);
 }
 
